--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
     "temperature = 85\n",
     "is_it_hot = None\n",
     "# conditionals go here\n",
-    "if"
+    "if temperature "
    ]
   },
   {
