--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
     "is_it_hot = None\n",
     "# conditionals go here\n",
     "if temperature > 80:\n",
-    "    is"
+    "    is_it_hot = 'It is so hot o'"
    ]
   },
   {
