Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,8 @@
     "# conditionals go here\n",
     "if temperature > 80:\n",
     "    is_it_hot = 'It is so hot out!'\n",
-    "else\n",
-    "    is_it_hot = ''"
+    "else:\n",
+    "    is_it_hot = 'This is nothing! Bring on the heat.'"
    ]
   },
   {
