--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,9 @@
     "day_of_the_week = None\n",
     "# conditionals go here\n",
     "if today_is == 1:\n",
-    "    day_of_the_week = 'S'"
+    "    day_of_the_week = 'Sunday'\n",
+    "elif today_is == 2:\n",
+    "    day_of_the_week = 'Sunday'"
    ]
   },
   {
