--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,10 @@
     "elif today_is == 2:\n",
     "    day_of_the_week = 'Monday'\n",
     "elif today_is == 3:\n",
-    "    day_of_the_week = 'Monday'"
+    "    day_of_the_week = 'Tuesday'\n",
+    "elif today_is == 4:\n",
+    "    day_of_the_week = 'Wednesday'\n",
+    "    "
    ]
   },
   {
