--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
     "elif today_is == 6:\n",
     "    day_of_the_week = 'Friday'\n",
     "else:\n",
-    "    day"
+    "    day_of_the_week = 'Saturday'"
    ]
   },
   {
