--- a/index.ipynb
+++ b/index.ipynb
@@ -45,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'It is so hot out!'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
@@ -56,7 +67,8 @@
     "    is_it_hot = 'It is so hot out!'\n",
     "else:\n",
     "    is_it_hot = 'This is nothing! Bring on the heat.'\n",
-    "    \n"
+    "    \n",
+    "is_it_hot"
    ]
   },
   {
