Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -101,7 +101,9 @@
     "elif today_is == 6:\n",
     "    day_of_the_week = 'Friday'\n",
     "else:\n",
-    "    day_of_the_week = 'Saturday'"
+    "    day_of_the_week = 'Saturday'\n",
+    "    \n",
+    "t"
    ]
   },
   {
