Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,9 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wednesday'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
@@ -103,7 +114,7 @@
     "else:\n",
     "    day_of_the_week = 'Saturday'\n",
     "    \n",
-    "t"
+    "day_of_the_week"
    ]
   },
   {
