--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
-    "if string.ends"
+    "if string.endswith(end)"
    ]
   },
   {
