--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,8 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
-    "if string.endswith(end)"
+    "if string.endswith(sub_string):\n",
+    "    ends_with"
    ]
   },
   {
