--- a/index.ipynb
+++ b/index.ipynb
@@ -126,16 +126,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
     "ends_with = string.endswith(sub_string)\n",
-    "wnd"
+    "ends_with"
    ]
   },
   {
