Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "'Wednesday'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
     "    day_of_the_week = 'Thursday'\n",
     "elif today_is == 6:\n",
     "    day_of_the_week = 'Friday'\n",
-    "else:\n",
+    "elif day_of_the_week == 7:\n",
     "    day_of_the_week = 'Saturday'\n",
     "    \n",
     "day_of_the_week"
